@@ -108,7 +108,7 @@ public class DBDataSource extends compiereDataSource
 				}
 				else if (clazz.equals(java.lang.Byte.class))
 				{
-					objValue = new Byte(m_resultSet.getByte(field.getName()));
+					objValue = Byte.valueOf(m_resultSet.getByte(field.getName()));
 					if(m_resultSet.wasNull())
 					{
 						objValue = null;
@@ -172,7 +172,7 @@ public class DBDataSource extends compiereDataSource
 				}
 				else if (clazz.equals(java.lang.Short.class))
 				{
-					objValue = new Short(m_resultSet.getShort(field.getName()));
+					objValue = Short.valueOf(m_resultSet.getShort(field.getName()));
 					if(m_resultSet.wasNull())
 					{
 						objValue = null;
